# NVPV-aws

./: .gitignore  main.py  pyproject.toml  requirements.txt
